--- a/Problem2/index.html
+++ b/Problem2/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type=""text/javascript" src="Lists.js"></script>
+    <script type="text/javascript" src="Lists.js"></script>
     <title>Title</title>
     </head>
     <body>
